[gd_scene load_steps=13 format=3 uid="uid://mw0ubw0vk5me"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_fk5gm"]
[ext_resource type="Texture2D" uid="uid://c13dl2cinssmr" path="res://Assets/Menu/main.png" id="2_3d7cr"]
[ext_resource type="Texture2D" uid="uid://dtsc0nq8mgtqm" path="res://Assets/Menu/logo.png" id="3_akc16"]
[ext_resource type="Texture2D" uid="uid://bav72vuoreih6" path="res://Assets/Menu/start.png" id="3_cjrhb"]
[ext_resource type="Texture2D" uid="uid://crx5nnvt735bs" path="res://Assets/Menu/Pointer.png" id="4_6m2ik"]
[ext_resource type="Texture2D" uid="uid://cn10aavouh1bi" path="res://Assets/Menu/start-hoover.png" id="4_rpyo4"]
[ext_resource type="Texture2D" uid="uid://byyfmbuqjic31" path="res://Assets/Menu/exit.png" id="5_f6jvm"]
[ext_resource type="Texture2D" uid="uid://v2pegd5dt06p" path="res://Assets/Menu/exit-hoover.png" id="6_0i610"]
[ext_resource type="AudioStream" uid="uid://cvkf730n6lsum" path="res://Assets/Audio/this-will-find-who-need-it.ogg" id="9_pxaax"]
[ext_resource type="VideoStream" path="res://Assets/glacial_params_intro_nosound-‚Äê-Hecho-con-Clipchamp.ogv" id="10_u2mp8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gc4iu"]
texture = ExtResource("2_3d7cr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qymxu"]
texture = ExtResource("3_akc16")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fk5gm")

[node name="BGPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gc4iu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -113.0
offset_right = 36.0
offset_bottom = 180.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 50
alignment = 1

[node name="startButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../exitButton")
texture_normal = ExtResource("3_cjrhb")
texture_hover = ExtResource("4_rpyo4")
texture_focused = ExtResource("4_rpyo4")

[node name="exitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../startButton")
texture_normal = ExtResource("5_f6jvm")
texture_hover = ExtResource("6_0i610")
texture_focused = ExtResource("6_0i610")

[node name="LogoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -368.0
offset_top = 13.0
offset_right = -19.0
offset_bottom = 164.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_qymxu")

[node name="Pointer" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 866.0
offset_top = 250.0
offset_right = 1061.0
offset_bottom = 373.0
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_6m2ik")
flip_h = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_pxaax")
autoplay = true

[node name="FadeRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="VideoPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("10_u2mp8")

[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exitButton" to="." method="_on_exit_button_pressed"]
